NXP-32725: Add excludedAttributes and attributes support